path-layer: Stop invalidate_canvas idle callback

https://bugzilla.gnome.org/show_bug.cgi?id=734380